--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,190 +3,158 @@
 #
 
 sidebar:
-    about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
+    about: False # set to False or comment line if you want to remove the "how to use?" in the sidebar
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Nicola Sosio
+    tagline: Senior Data Scientist
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
-    github: sharu725
-    telegram: # add your nickname without '@' sign
-    gitlab:
-    bitbucket:
-    twitter: '@webjeda'
-    stack-overflow: # Number/Username, e.g. 123456/alandoe
-    codewars:
-    goodreads: # Number-Username, e.g. 123456-alandoe
+    email: sosio.nicola94@tiscali.it
+    phone: +39 338 4240054
+    #website: blog.webjeda.com #do not add http://
+    linkedin: nicola-sosio
+    #xing: alandoe
+    github: nsosio
+    #telegram: # add your nickname without '@' sign
+    #gitlab:
+    #bitbucket:
+    #twitter: '@webjeda'
+    #stack-overflow: # Number/Username, e.g. 123456/alandoe
+    #codewars:
+    #goodreads: # Number-Username, e.g. 123456-alandoe
     pdf: http://www.africau.edu/images/default/sample.pdf
 
     languages:
-      - idiom: English
+      - idiom: Italian
         level: Native
 
-      - idiom: French
-        level: Professional
-
-      - idiom: Spanish
+      - idiom: English
         level: Professional
 
     interests:
-      - item: Climbing
+      - item: Climbing 🧗🏻
         link:
 
-      - item: Snowboarding
+      - item: Snowboarding 🏂
         link:
 
-      - item: Cooking
+      - item: Traveling ✈️
         link:
 
 career-profile:
-    title: Career Profile
+    title: Career
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      A self-motivated, ambitious person passionate about data science. I relish
+       being challenged and working on projects that require me to work outside
+       my comfort zone and knowledge background. Knowing that there is always
+       much to learn, and that there is no cap on the knowledge base, drives
+       me to continue in the field.
 education:
     - degree: MSc in Computer Science
-      university: University of London
-      time: 2011 - 2012
+      university: Politecnico di Milano
+      time: Sept 2016 - Dec 2018
       details: |
-        Describe your study here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-        sociis natoque penatibus et magnis dis parturient montes, nascetur
-        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-        pretium quis, sem.
-          - Bullet point
-          - Bullet point
-    - degree: BSc in Applied Mathematics
-      university: Bristol University
-      time: 2007 - 2011
+        Thesis : Exploiting Channels Interdependence in Internet Advertising
+        Campaigns Optimization. Final Mark: 110/110 cum laude
+    - degree: BSc in Computer Science
+      university: Politecnico di Milano
+      time: Oct 2013 - Sept 2016
       details: |
-        Describe your study here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-        sociis natoque penatibus et magnis dis parturient montes, nascetur
-        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-        pretium quis, sem.
-          - Bullet point
-          - Bullet point
+        Final Mark : 99/110
 experiences:
-    - role: Lead Developer
-      time: 2015 - Present
-      company: Startup Hubs, San Francisco
+    - role: Senior Data Scientist
+      time: July 2021 - Ongoing
+      company: Prometeia, Milano
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-        enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-        error sit voluptatem accusantium doloremque laudantium, totam rem
-        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-        architecto beatae vitae dicta sunt explicabo.
-          - Bullet point
-          - Bullet point
-    - role: Senior Software Engineer
-      time: 2014 - 2015
-      company: Google, London
+        Development of a NLP pipeline for multilanguage text clustering in order
+        to extract a topics hyerarchy.
+    - role: Data Scientist
+      time: Mar 2019 - June 2021
+      company: Prometeia, Milano
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
-          - Bullet point
-    - role: UI Developer
-      time: 2012 - 2014
-      company: Amazon, London
-      details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
-          - Bullet point
+          - Integration of OCR and object detection algorithms for the
+          extraction and structuring of semi-structured PDF documents.
+          - Development of a transactional scoring model for Credit Risk,
+           including a feature engineering and extraction pipeline
+           in a distributed environment (PySpark).
+          - Development of a rule-based system, including an ETL pipeline,
+          and its deployment on Google Cloud Platform.
 projects:
     title: Projects
     intro: >
-      You can list your side projects or open source libraries in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
+
     assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
+      - title: Convolutional Neural Network to Detect Equivalent Questions in Online Forums
+        link: "https://github.com/nsosio/Deep-Learning"
+        tagline: "Develop a Convolutional Neural Network (CNN) to detect semantically equivalent questions.
+         In the first step, the network transforms words into real valued feature vectors, also known as
+         word embeddings. Next, a convolutional layer is used to construct two distributed vector representations,
+         one for each input question. Finally, the network computes a similarity score between the two distributed
+         vector representations. Pairs of questions with similarity above a threshold are considered duplicates."
 
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
-
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
+      - title: Aui-ConversationalEmotion
+        link: "https://github.com/nsosio/Aui-ConversationalEmotion"
+        tagline: "Focus on the design, development and evaluation of a conversational agent with sentiment analysis
+        capabilities from natural language processing. Design an algorithm to explore conversational patterns
+        defining emo- tions."
 
 publications:
     title: Publications
     intro: |
-      You can list your publications in this section. Lorem ipsum dolor sit
-      amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
-      bibendum fringilla a eu lectus.
     papers:
-      - title: The Art of Computer Programming
-        link: "#"
-        authors: Donald E. Knuth
-        conference: Addison-Wesley, 1968
-
-      - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
-        link: "#"
-        authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
-        conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
-
-      - title: A syntax directed compiler for Algol 60
-        link: "#"
-        authors: Edgar T. Irons
-        conference: "Comm. ACM 4 (1961), 51–55"
+      - title: Dealing with interdependencies and uncertainty in multi-channel advertising campaigns optimization.
+        link: "https://dl.acm.org/doi/abs/10.1145/3308558.3313470"
+        authors: Nuara, A., Sosio, N., Trovò, F., Zaccardi, M. C., Gatti, N., & Restelli, M.
+        conference: The world wide web conference (pp. 1376–1386). ACM. (2019)
 
 skills:
-    title: Skills &amp; Proficiency
+    title: Skills
 
     toolset:
-      - name: Python & Django
-        level: 98%
 
-      - name: Javascript & jQuery
-        level: 98%
+      -name: Python
+       level: 95%
 
-      - name: Angular
-        level: 98%
+      - name: Pandas
+        level: 90%
 
-      - name: HTML5 & CSS
-        level: 95%
+      - name: SQL
+        level: 90%
 
-      - name: Ruby on Rails
+      - name: Spark
         level: 85%
 
-      - name: Sketch & Photoshop
-        level: 60%
+      - name: Software Engineering
+        level: 85%
+
+      -name: Scikit-learn
+       level: 80%
+
+      - name: Outlier Detection Algorithms
+        level: 75%
+
+      - name: NLP
+        level: 75%
+
+      - name: OCR
+        level: 75%
+
+      -name: Spacy
+       level: 75%
+
+      -name: Tensorflow
+       level: 75%
+
+      -name: Google Cloud Platform
+       level: 65%
+
+      -name: Computer Vision
+       level: 60%
+
+
 
 footer: >
-    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
+    Designed with <i class="fas fa-heart"></i> by <a href="https://github.com/nsosio" target="_blank" rel="nofollow">Nicola Sosio</a>
