--- a/_data/data.yml
+++ b/_data/data.yml
@@ -35,6 +35,10 @@ sidebar:
         level: Professional
 
     interests:
+
+      - item: Trekking ⛰
+        link:
+          
       - item: Climbing 🧗🏻
         link:
 
